# serializer version: 1
# name: test_snapshot_config_variants[alphabetical_sort-alpha-<lambda>][alphabetical_sort]
  '''
  [1;34m.[0m                        [32m+475[0m [31m-68[0m     [32m████████████████████[0m [31m██████████[0m   [36m100.0%[0m
  ├── [37mREADME.md[0m             [32m+20[0m [31m-3[0m      [32m                   ▉[0m [31m▍         [0m   [36m  4.2%[0m
  ├── [1;34mdocs[0m                  [32m+25[0m         [32m                   █[0m [31m          [0m   [36m  4.6%[0m
  │   └── [37mapi.md[0m            [32m+25[0m         [32m                   █[0m [31m          [0m   [36m  4.6%[0m
  ├── [1;34msrc[0m                  [32m+320[0m [31m-58[0m     [32m      ▐█████████████[0m [31m████████▌ [0m   [36m 69.6%[0m
  │   ├── [1;34mapi[0m               [32m+60[0m [31m-8[0m      [32m                 ▐██[0m [31m█▏        [0m   [36m 12.5%[0m
  │   │   └── [37mroutes.py[0m     [32m+60[0m [31m-8[0m      [32m                 ▐██[0m [31m█▏        [0m   [36m 12.5%[0m
  │   ├── [37mmain.py[0m           [32m+50[0m [31m-10[0m     [32m                  ██[0m [31m█▍        [0m   [36m 11.0%[0m
  │   ├── [1;34mmodels[0m           [32m+180[0m [31m-35[0m     [32m            ▐███████[0m [31m█████▏    [0m   [36m 39.6%[0m
  │   │   ├── [37mpost.py[0m       [32m+80[0m [31m-15[0m     [32m                ▕███[0m [31m██▏       [0m   [36m 17.5%[0m
  │   │   └── [37muser.py[0m      [32m+100[0m [31m-20[0m     [32m               ▕████[0m [31m██▉       [0m   [36m 22.1%[0m
  │   └── [37mutils.py[0m          [32m+30[0m [31m-5[0m      [32m                  ▕█[0m [31m▋         [0m   [36m  6.4%[0m
  └── [1;34mtests[0m                [32m+110[0m [31m-7[0m      [32m               ▐████[0m [31m█         [0m   [36m 21.5%[0m
      ├── [37mtest_main.py[0m      [32m+40[0m [31m-2[0m      [32m                  ▐█[0m [31m▎         [0m   [36m  7.7%[0m
      └── [37mtest_models.py[0m    [32m+70[0m [31m-5[0m      [32m                 ███[0m [31m▋         [0m   [36m 13.8%[0m
  
  '''
# ---
# name: test_snapshot_config_variants[custom_bar_width-size-<lambda>][custom_bar_width]
  '''
  [1;34m.[0m                        [32m+475[0m [31m-68[0m     [32m██████████████████████████████[0m [31m██████████[0m   [36m100.0%[0m
  ├── [1;34msrc[0m                  [32m+320[0m [31m-58[0m     [32m         ▕████████████████████[0m [31m████████▌ [0m   [36m 69.6%[0m
  │   ├── [1;34mmodels[0m           [32m+180[0m [31m-35[0m     [32m                  ▕███████████[0m [31m█████▏    [0m   [36m 39.6%[0m
  │   │   ├── [37muser.py[0m      [32m+100[0m [31m-20[0m     [32m                       ▕██████[0m [31m██▉       [0m   [36m 22.1%[0m
  │   │   └── [37mpost.py[0m       [32m+80[0m [31m-15[0m     [32m                         █████[0m [31m██▏       [0m   [36m 17.5%[0m
  │   ├── [1;34mapi[0m               [32m+60[0m [31m-8[0m      [32m                          ▉███[0m [31m█▏        [0m   [36m 12.5%[0m
  │   │   └── [37mroutes.py[0m     [32m+60[0m [31m-8[0m      [32m                          ▉███[0m [31m█▏        [0m   [36m 12.5%[0m
  │   ├── [37mmain.py[0m           [32m+50[0m [31m-10[0m     [32m                          ▕███[0m [31m█▍        [0m   [36m 11.0%[0m
  │   └── [37mutils.py[0m          [32m+30[0m [31m-5[0m      [32m                            ██[0m [31m▋         [0m   [36m  6.4%[0m
  ├── [1;34mtests[0m                [32m+110[0m [31m-7[0m      [32m                       ███████[0m [31m█         [0m   [36m 21.5%[0m
  │   ├── [37mtest_models.py[0m    [32m+70[0m [31m-5[0m      [32m                         ▐████[0m [31m▋         [0m   [36m 13.8%[0m
  │   └── [37mtest_main.py[0m      [32m+40[0m [31m-2[0m      [32m                           ▐██[0m [31m▎         [0m   [36m  7.7%[0m
  ├── [1;34mdocs[0m                  [32m+25[0m         [32m                            ▐█[0m [31m          [0m   [36m  4.6%[0m
  │   └── [37mapi.md[0m            [32m+25[0m         [32m                            ▐█[0m [31m          [0m   [36m  4.6%[0m
  └── [37mREADME.md[0m             [32m+20[0m [31m-3[0m      [32m                            ▕█[0m [31m▍         [0m   [36m  4.2%[0m
  
  '''
# ---
# name: test_snapshot_config_variants[default_rendering-size-<lambda>][default_rendering]
  '''
  [1;34m.[0m                        [32m+475[0m [31m-68[0m     [32m████████████████████[0m [31m██████████[0m   [36m100.0%[0m
  ├── [1;34msrc[0m                  [32m+320[0m [31m-58[0m     [32m      ▐█████████████[0m [31m████████▌ [0m   [36m 69.6%[0m
  │   ├── [1;34mmodels[0m           [32m+180[0m [31m-35[0m     [32m            ▐███████[0m [31m█████▏    [0m   [36m 39.6%[0m
  │   │   ├── [37muser.py[0m      [32m+100[0m [31m-20[0m     [32m               ▕████[0m [31m██▉       [0m   [36m 22.1%[0m
  │   │   └── [37mpost.py[0m       [32m+80[0m [31m-15[0m     [32m                ▕███[0m [31m██▏       [0m   [36m 17.5%[0m
  │   ├── [1;34mapi[0m               [32m+60[0m [31m-8[0m      [32m                 ▐██[0m [31m█▏        [0m   [36m 12.5%[0m
  │   │   └── [37mroutes.py[0m     [32m+60[0m [31m-8[0m      [32m                 ▐██[0m [31m█▏        [0m   [36m 12.5%[0m
  │   ├── [37mmain.py[0m           [32m+50[0m [31m-10[0m     [32m                  ██[0m [31m█▍        [0m   [36m 11.0%[0m
  │   └── [37mutils.py[0m          [32m+30[0m [31m-5[0m      [32m                  ▕█[0m [31m▋         [0m   [36m  6.4%[0m
  ├── [1;34mtests[0m                [32m+110[0m [31m-7[0m      [32m               ▐████[0m [31m█         [0m   [36m 21.5%[0m
  │   ├── [37mtest_models.py[0m    [32m+70[0m [31m-5[0m      [32m                 ███[0m [31m▋         [0m   [36m 13.8%[0m
  │   └── [37mtest_main.py[0m      [32m+40[0m [31m-2[0m      [32m                  ▐█[0m [31m▎         [0m   [36m  7.7%[0m
  ├── [1;34mdocs[0m                  [32m+25[0m         [32m                   █[0m [31m          [0m   [36m  4.6%[0m
  │   └── [37mapi.md[0m            [32m+25[0m         [32m                   █[0m [31m          [0m   [36m  4.6%[0m
  └── [37mREADME.md[0m             [32m+20[0m [31m-3[0m      [32m                   ▉[0m [31m▍         [0m   [36m  4.2%[0m
  
  '''
# ---
# name: test_snapshot_config_variants[minimal-size-<lambda>][minimal]
  '''
  [1;34m.[0m                     
  ├── [1;34msrc[0m               
  │   ├── [1;34mmodels[0m        
  │   │   ├── [37muser.py[0m   
  │   │   └── [37mpost.py[0m   
  │   ├── [1;34mapi[0m           
  │   │   └── [37mroutes.py[0m 
  │   ├── [37mmain.py[0m       
  │   └── [37mutils.py[0m      
  ├── [1;34mtests[0m             
  │   ├── [37mtest_models.py[0m
  │   └── [37mtest_main.py[0m  
  ├── [1;34mdocs[0m              
  │   └── [37mapi.md[0m        
  └── [37mREADME.md[0m         
  
  '''
# ---
# name: test_snapshot_config_variants[no_bars-size-<lambda>][no_bars]
  '''
  [1;34m.[0m                        [32m+475[0m [31m-68[0m     [36m100.0%[0m
  ├── [1;34msrc[0m                  [32m+320[0m [31m-58[0m     [36m 69.6%[0m
  │   ├── [1;34mmodels[0m           [32m+180[0m [31m-35[0m     [36m 39.6%[0m
  │   │   ├── [37muser.py[0m      [32m+100[0m [31m-20[0m     [36m 22.1%[0m
  │   │   └── [37mpost.py[0m       [32m+80[0m [31m-15[0m     [36m 17.5%[0m
  │   ├── [1;34mapi[0m               [32m+60[0m [31m-8[0m      [36m 12.5%[0m
  │   │   └── [37mroutes.py[0m     [32m+60[0m [31m-8[0m      [36m 12.5%[0m
  │   ├── [37mmain.py[0m           [32m+50[0m [31m-10[0m     [36m 11.0%[0m
  │   └── [37mutils.py[0m          [32m+30[0m [31m-5[0m      [36m  6.4%[0m
  ├── [1;34mtests[0m                [32m+110[0m [31m-7[0m      [36m 21.5%[0m
  │   ├── [37mtest_models.py[0m    [32m+70[0m [31m-5[0m      [36m 13.8%[0m
  │   └── [37mtest_main.py[0m      [32m+40[0m [31m-2[0m      [36m  7.7%[0m
  ├── [1;34mdocs[0m                  [32m+25[0m         [36m  4.6%[0m
  │   └── [37mapi.md[0m            [32m+25[0m         [36m  4.6%[0m
  └── [37mREADME.md[0m             [32m+20[0m [31m-3[0m      [36m  4.2%[0m
  
  '''
# ---
# name: test_snapshot_config_variants[no_counts-size-<lambda>][no_counts]
  '''
  [1;34m.[0m                        [32m████████████████████[0m [31m████████████[0m   [36m100.0%[0m
  ├── [1;34msrc[0m                  [32m      ▐█████████████[0m [31m██████████▏ [0m   [36m 69.6%[0m
  │   ├── [1;34mmodels[0m           [32m            ▐███████[0m [31m██████▏     [0m   [36m 39.6%[0m
  │   │   ├── [37muser.py[0m      [32m               ▕████[0m [31m███▌        [0m   [36m 22.1%[0m
  │   │   └── [37mpost.py[0m      [32m                ▕███[0m [31m██▋         [0m   [36m 17.5%[0m
  │   ├── [1;34mapi[0m              [32m                 ▐██[0m [31m█▍          [0m   [36m 12.5%[0m
  │   │   └── [37mroutes.py[0m    [32m                 ▐██[0m [31m█▍          [0m   [36m 12.5%[0m
  │   ├── [37mmain.py[0m          [32m                  ██[0m [31m█▊          [0m   [36m 11.0%[0m
  │   └── [37mutils.py[0m         [32m                  ▕█[0m [31m▉           [0m   [36m  6.4%[0m
  ├── [1;34mtests[0m                [32m               ▐████[0m [31m█▏          [0m   [36m 21.5%[0m
  │   ├── [37mtest_models.py[0m   [32m                 ███[0m [31m▉           [0m   [36m 13.8%[0m
  │   └── [37mtest_main.py[0m     [32m                  ▐█[0m [31m▎           [0m   [36m  7.7%[0m
  ├── [1;34mdocs[0m                 [32m                   █[0m [31m            [0m   [36m  4.6%[0m
  │   └── [37mapi.md[0m           [32m                   █[0m [31m            [0m   [36m  4.6%[0m
  └── [37mREADME.md[0m            [32m                   ▉[0m [31m▌           [0m   [36m  4.2%[0m
  
  '''
# ---
# name: test_snapshot_config_variants[no_percentages-size-<lambda>][no_percentages]
  '''
  [1;34m.[0m                        [32m+475[0m [31m-68[0m     [32m████████████████████[0m [31m███████████[0m
  ├── [1;34msrc[0m                  [32m+320[0m [31m-58[0m     [32m      ▐█████████████[0m [31m█████████▍ [0m
  │   ├── [1;34mmodels[0m           [32m+180[0m [31m-35[0m     [32m            ▐███████[0m [31m█████▋     [0m
  │   │   ├── [37muser.py[0m      [32m+100[0m [31m-20[0m     [32m               ▕████[0m [31m███▏       [0m
  │   │   └── [37mpost.py[0m       [32m+80[0m [31m-15[0m     [32m                ▕███[0m [31m██▍        [0m
  │   ├── [1;34mapi[0m               [32m+60[0m [31m-8[0m      [32m                 ▐██[0m [31m█▎         [0m
  │   │   └── [37mroutes.py[0m     [32m+60[0m [31m-8[0m      [32m                 ▐██[0m [31m█▎         [0m
  │   ├── [37mmain.py[0m           [32m+50[0m [31m-10[0m     [32m                  ██[0m [31m█▌         [0m
  │   └── [37mutils.py[0m          [32m+30[0m [31m-5[0m      [32m                  ▕█[0m [31m▊          [0m
  ├── [1;34mtests[0m                [32m+110[0m [31m-7[0m      [32m               ▐████[0m [31m█▏         [0m
  │   ├── [37mtest_models.py[0m    [32m+70[0m [31m-5[0m      [32m                 ███[0m [31m▊          [0m
  │   └── [37mtest_main.py[0m      [32m+40[0m [31m-2[0m      [32m                  ▐█[0m [31m▎          [0m
  ├── [1;34mdocs[0m                  [32m+25[0m         [32m                   █[0m [31m           [0m
  │   └── [37mapi.md[0m            [32m+25[0m         [32m                   █[0m [31m           [0m
  └── [37mREADME.md[0m             [32m+20[0m [31m-3[0m      [32m                   ▉[0m [31m▍          [0m
  
  '''
# ---
# name: test_snapshot_scenarios[binary_file-<lambda>][binary_file]
  '''
  [1;34m.[0m                        [32m+15[0m [31m-3[0m     [32m████████████████████[0m [31m█████████████[0m   [36m100.0%[0m
  ├── [1;34msrc[0m                  [32m+10[0m [31m-2[0m     [32m      ▕█████████████[0m [31m████████▋    [0m   [36m 66.7%[0m
  │   └── [37mcode.py[0m          [32m+10[0m [31m-2[0m     [32m      ▕█████████████[0m [31m████████▋    [0m   [36m 66.7%[0m
  ├── [37mREADME.md[0m             [32m+5[0m [31m-1[0m     [32m             ▐██████[0m [31m████▎        [0m   [36m 33.3%[0m
  └── [1;34massets[0m                                               [31m             [0m   [36m  0.0%[0m
      ├── [37mimage.png[0m   [2m[Binary][0m                                                   
      └── [37mdata.bin[0m    [2m[Binary][0m                                                   
  
  '''
# ---
# name: test_snapshot_scenarios[deep_nesting-<lambda>][deep_nesting]
  '''
  [1;34m.[0m                                 [32m+45[0m [31m-10[0m     [32m████████████████████[0m [31m████████████[0m   [36m100.0%[0m
  └── [1;34ma[0m                             [32m+45[0m [31m-10[0m     [32m████████████████████[0m [31m████████████[0m   [36m100.0%[0m
      └── [1;34mb[0m                         [32m+45[0m [31m-10[0m     [32m████████████████████[0m [31m████████████[0m   [36m100.0%[0m
          ├── [1;34mc[0m                     [32m+35[0m [31m-8[0m      [32m    ▐███████████████[0m [31m█████████▌  [0m   [36m 78.2%[0m
          │   ├── [1;34md[0m                 [32m+20[0m [31m-5[0m      [32m           █████████[0m [31m██████      [0m   [36m 45.5%[0m
          │   │   └── [1;34me[0m             [32m+20[0m [31m-5[0m      [32m           █████████[0m [31m██████      [0m   [36m 45.5%[0m
          │   │       └── [37mfile.py[0m   [32m+20[0m [31m-5[0m      [32m           █████████[0m [31m██████      [0m   [36m 45.5%[0m
          │   └── [1;34mx[0m                 [32m+15[0m [31m-3[0m      [32m             ▐██████[0m [31m███▌        [0m   [36m 32.7%[0m
          │       └── [1;34my[0m             [32m+15[0m [31m-3[0m      [32m             ▐██████[0m [31m███▌        [0m   [36m 32.7%[0m
          │           └── [37mfile.py[0m   [32m+15[0m [31m-3[0m      [32m             ▐██████[0m [31m███▌        [0m   [36m 32.7%[0m
          └── [37mfile.py[0m               [32m+10[0m [31m-2[0m      [32m               ▐████[0m [31m██▍         [0m   [36m 21.8%[0m
  
  '''
# ---
# name: test_snapshot_scenarios[only_additions-<lambda>][only_additions]
  '''
  [1;34m.[0m                      [32m+100[0m      [32m████████████████████[0m [31m          [0m   [36m100.0%[0m
  ├── [37mnew_file1.py[0m        [32m+50[0m      [32m          ██████████[0m [31m          [0m   [36m 50.0%[0m
  ├── [37mnew_file2.py[0m        [32m+30[0m      [32m              ██████[0m [31m          [0m   [36m 30.0%[0m
  └── [1;34mdir[0m                 [32m+20[0m      [32m                ████[0m [31m          [0m   [36m 20.0%[0m
      └── [37mnew_file3.py[0m    [32m+20[0m      [32m                ████[0m [31m          [0m   [36m 20.0%[0m
  
  '''
# ---
# name: test_snapshot_scenarios[only_deletions-<lambda>][only_deletions]
  '''
  [1;34m.[0m                       [31m-100[0m                [31m████████████████████[0m   [36m100.0%[0m
  ├── [37mold_file1.py[0m        [31m-50[0m                 [31m██████████          [0m   [36m 50.0%[0m
  ├── [37mold_file2.py[0m        [31m-30[0m                 [31m██████              [0m   [36m 30.0%[0m
  └── [1;34mdir[0m                 [31m-20[0m                 [31m████                [0m   [36m 20.0%[0m
      └── [37mold_file3.py[0m    [31m-20[0m                 [31m████                [0m   [36m 20.0%[0m
  
  '''
# ---
# name: test_snapshot_scenarios[small_tree-<lambda>][small_tree]
  '''
  [1;34m.[0m              [32m+15[0m [31m-3[0m     [32m████████████████████[0m [31m██████████████[0m   [36m100.0%[0m
  ├── [37mmain.py[0m    [32m+10[0m [31m-2[0m     [32m      ▕█████████████[0m [31m█████████▎    [0m   [36m 66.7%[0m
  └── [37mutils.py[0m    [32m+5[0m [31m-1[0m     [32m             ▐██████[0m [31m████▋         [0m   [36m 33.3%[0m
  
  '''
# ---
